# lib/db/src/schema/listings.ts
@@ -21,7 +21,9 @@ export const listingsTable = pgTable("listings", {
   bathroom: text("bathroom").notNull(),
   roommates: integer("roommates"),
   distance: text("distance"),
-  floor: integer("floor"),
+  floor: text("floor"),
+  advanceDeposit: text("advance_deposit"),
+  availableFrom: text("available_from"),
   hasLift: boolean("has_lift").notNull().default(false),
   hasBalcony: boolean("has_balcony").notNull().default(false),
   hasChadAccess: boolean("has_chad_access").notNull().default(false),
